Main statement for encoding scheme.

--- a/commanddefs.tex
+++ b/commanddefs.tex
@@ -92,3 +92,12 @@
 
 \newcommand*{\sisadv}{\overline{\adv}}
 \newcommand*{\sisadvkots}{\overline{\adv}}
+
+\newcommand*{\latring}{\Lambda_\ring}
+\newcommand*{\latmodular}{\Lambda_{\ring,q}}
+
+\newcommand*{\kernelbasis}{\mathcal{B}}
+
+\newcommand*{\latencode}{\ensuremath{\mathsf{Encode}_B}}
+\newcommand*{\latdecode}{\ensuremath{\mathsf{Decode}_B}}
+\DeclareMathOperator*{\Span}{Span}
